--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -11,8 +11,11 @@ import { Form } from "@jobber/components/Form";
 import { InputNumber } from "@jobber/components/InputNumber";
 import { Content } from "@jobber/components/Content";
 import { Button } from "@jobber/components/Button";
+import { Snack } from "@jobber/docz-tools";
 
 # Button
+
+<Snack snack="@edeesims/healthy-mixed-nuts" />
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
