docs: Add some documentation about validations (#479)
* add some documentation about validation

* add some docs to InputPassword

* remove example

* add in state to example

* add in example

* add docs to inputnumber

* add some other validation docs

--- a/packages/components/src/InputPassword/InputPassword.mdx
+++ b/packages/components/src/InputPassword/InputPassword.mdx
@@ -51,6 +51,9 @@ character-masking, consider using
 
 ## With Error
 
+For more information about available `validations`, see the
+[InputText](/components/input-text/#validation-message) docs.
+
 <Playground>
   <InputPassword
     placeholder="Password"
