--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -84,6 +84,9 @@ no value to the user by offering an incrementer.
 
 ### Invalid
 
+For more information about available `validations`, see the
+[InputText](/components/input-text/#validation-message) docs.
+
 <Playground>
   <InputNumber
     placeholder="Give a whole number"
@@ -154,3 +157,6 @@ no value to the user by offering an incrementer.
 
 If you need to capture the error message and render it outside of the component.
 Read the [InputValidation](/components/input-validation) documentation.
+
+For more details about `validation` using `Input` components, see the
+[InputText](/components/input-text/#validation-message) documentation.
