--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -18,6 +18,9 @@ import { InputValidation } from ".";
 `InputValidation` allows you to show the validation messages separate from a
 particular input component.
 
+For more information about `validations` using any of the `Input` components,
+see the [InputText](/components/input-text/#validation-message) documentation.
+
 ```ts
 import { InputValidation } from "@jobber/components/InputValidation";
 ```
@@ -26,7 +29,7 @@ import { InputValidation } from "@jobber/components/InputValidation";
   {() => {
     const [validationMessages, setValidationMessages] = useState(undefined);
     return (
-      <>
+      <div>
         {validationMessages && <InputValidation message={validationMessages} />}
         <Text>
           My name is
@@ -49,7 +52,7 @@ import { InputValidation } from "@jobber/components/InputValidation";
             maxLength={4}
           />
         </Text>
-      </>
+      </div>
     );
   }}
 </Playground>
@@ -57,5 +60,3 @@ import { InputValidation } from "@jobber/components/InputValidation";
 ## Props
 
 <Props of={InputValidation} />
-
----
