Add Button to Button

--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -2,6 +2,7 @@
 name: Button
 menu: Components
 route: /components/button
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
