--- a/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
+++ b/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
@@ -2,6 +2,7 @@
 name: FeatureSwitch
 menu: Patterns
 route: /components/feature-switch
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
@@ -9,8 +10,6 @@ import { ComponentStatus } from "@jobber/docx";
 import { FeatureSwitch } from ".";
 import { Text } from "../Text";
 import { useState } from "react";
-
-# Feature Switch
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
