update all component mdx

--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -2,6 +2,7 @@
 name: Autocomplete
 menu: Components
 route: /components/autocomplete
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
