--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -2,6 +2,7 @@
 name: Banner
 menu: Components
 route: /components/banner
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
