--- a/packages/components/src/ButtonDismiss/ButtonDismiss.mdx
+++ b/packages/components/src/ButtonDismiss/ButtonDismiss.mdx
@@ -2,6 +2,7 @@
 name: ButtonDismiss
 menu: Components
 route: /components/button-dismiss
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
