--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -2,6 +2,7 @@
 name: Checkbox
 menu: Components
 route: /components/checkbox
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
