--- a/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
+++ b/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
@@ -2,6 +2,7 @@
 name: ConfirmationModal
 menu: Components
 route: /components/confirmation-modal
+showDirectoryLink: true
 ---
 
 import { useRef, useState } from "react";
