--- a/packages/components/src/Content/Content.mdx
+++ b/packages/components/src/Content/Content.mdx
@@ -2,6 +2,7 @@
 name: Content
 menu: Components
 route: /components/content
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
