--- a/packages/components/src/DataDump/DataDump.mdx
+++ b/packages/components/src/DataDump/DataDump.mdx
@@ -2,6 +2,7 @@
 name: DataDump
 menu: Components
 route: /components/data-dump
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
