--- a/packages/components/src/DescriptionList/DescriptionList.mdx
+++ b/packages/components/src/DescriptionList/DescriptionList.mdx
@@ -2,6 +2,7 @@
 name: DescriptionList
 menu: Components
 route: /components/description-list
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
