--- a/packages/components/src/Divider/Divider.mdx
+++ b/packages/components/src/Divider/Divider.mdx
@@ -2,6 +2,7 @@
 name: Divider
 menu: Components
 route: /components/divider
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
