--- a/packages/components/src/Drawer/Drawer.mdx
+++ b/packages/components/src/Drawer/Drawer.mdx
@@ -2,6 +2,7 @@
 name: Drawer
 menu: Components
 route: /components/drawer
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
