--- a/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
+++ b/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
@@ -2,6 +2,7 @@
 name: FeatureSwitch
 menu: Patterns
 route: /components/feature-switch
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
