--- a/packages/components/src/FormField/FormField.mdx
+++ b/packages/components/src/FormField/FormField.mdx
@@ -2,6 +2,7 @@
 name: FormField
 menu: Components
 route: /components/form-field
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
