--- a/packages/components/src/FormatDate/FormatDate.mdx
+++ b/packages/components/src/FormatDate/FormatDate.mdx
@@ -2,6 +2,7 @@
 name: FormatDate
 menu: Components
 route: /components/date-formatter
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
