--- a/packages/components/src/FormatEmail/FormatEmail.mdx
+++ b/packages/components/src/FormatEmail/FormatEmail.mdx
@@ -2,6 +2,7 @@
 name: FormatEmail
 menu: Components
 route: /components/format-email
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
