--- a/packages/components/src/FormatFile/FormatFile.mdx
+++ b/packages/components/src/FormatFile/FormatFile.mdx
@@ -2,6 +2,7 @@
 name: FormatFile
 menu: Components
 route: /components/format-file
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
