--- a/packages/components/src/FormatRelativeDateTime/FormatRelativeDateTime.mdx
+++ b/packages/components/src/FormatRelativeDateTime/FormatRelativeDateTime.mdx
@@ -2,6 +2,7 @@
 name: FormatRelativeDateTime
 menu: Components
 route: /components/format-relative-date-time
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
