--- a/packages/components/src/FormatTime/FormatTime.mdx
+++ b/packages/components/src/FormatTime/FormatTime.mdx
@@ -2,6 +2,7 @@
 name: FormatTime
 menu: Components
 route: /components/time-formatter
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
