--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -2,6 +2,7 @@
 name: InlineLabel
 menu: Components
 route: /components/inline-label
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
