--- a/packages/components/src/InputFile/InputFile.mdx
+++ b/packages/components/src/InputFile/InputFile.mdx
@@ -2,6 +2,7 @@
 name: InputFile
 menu: Components
 route: /components/input-file
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
