--- a/packages/components/src/InputGroup/InputGroup.mdx
+++ b/packages/components/src/InputGroup/InputGroup.mdx
@@ -2,6 +2,7 @@
 name: InputGroup
 menu: Components
 route: /components/input-group
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
