--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -2,6 +2,7 @@
 name: InputNumber
 menu: Components
 route: /components/input-number
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
