--- a/packages/components/src/InputPassword/InputPassword.mdx
+++ b/packages/components/src/InputPassword/InputPassword.mdx
@@ -2,6 +2,7 @@
 name: InputPassword
 menu: Components
 route: /components/input-password
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
