--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -2,6 +2,7 @@
 name: InputText
 menu: Components
 route: /components/input-text
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
