--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -2,6 +2,7 @@
 name: InputValidation
 menu: Components
 route: /components/input-validation
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
