--- a/packages/components/src/Markdown/Markdown.mdx
+++ b/packages/components/src/Markdown/Markdown.mdx
@@ -2,6 +2,7 @@
 name: Markdown
 menu: Components
 route: /components/markdown
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
