--- a/packages/components/src/ProgressBar/ProgressBar.mdx
+++ b/packages/components/src/ProgressBar/ProgressBar.mdx
@@ -2,6 +2,7 @@
 name: ProgressBar
 menu: Components
 route: /components/progress-bar
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
