--- a/packages/components/src/RadioGroup/RadioGroup.mdx
+++ b/packages/components/src/RadioGroup/RadioGroup.mdx
@@ -2,6 +2,7 @@
 name: RadioGroup
 menu: Components
 route: /components/radio-group
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
