--- a/packages/components/src/Select/Select.mdx
+++ b/packages/components/src/Select/Select.mdx
@@ -2,6 +2,7 @@
 name: Select
 menu: Components
 route: /components/select
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
