--- a/packages/components/src/Spinner/Spinner.mdx
+++ b/packages/components/src/Spinner/Spinner.mdx
@@ -2,6 +2,7 @@
 name: Spinner
 menu: Components
 route: /components/spinner
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
