--- a/packages/components/src/Tooltip/Tooltip.mdx
+++ b/packages/components/src/Tooltip/Tooltip.mdx
@@ -2,6 +2,7 @@
 name: Tooltip
 menu: Components
 route: /components/tooltip
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
