--- a/packages/components/src/InputAvatar/InputAvatar.mdx
+++ b/packages/components/src/InputAvatar/InputAvatar.mdx
@@ -2,6 +2,7 @@
 name: InputAvatar
 menu: Components
 route: /components/input-avatar
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
