--- a/packages/components/src/InputTime/InputTime.mdx
+++ b/packages/components/src/InputTime/InputTime.mdx
@@ -2,6 +2,7 @@
 name: InputTime
 menu: Components
 route: /components/input-time
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
