--- a/packages/components/src/Switch/Switch.mdx
+++ b/packages/components/src/Switch/Switch.mdx
@@ -2,6 +2,7 @@
 name: Switch
 menu: Components
 route: /components/switch
+showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
