--- a/packages/components/src/Popover/Popover.mdx
+++ b/packages/components/src/Popover/Popover.mdx
@@ -52,7 +52,7 @@ import { Popover } from "@jobber/components/Popover";
           attachTo={checkboxRef}
           open={showPopover}
           dismissible={true}
-          placement={["right", "top"]}
+          placement="right"
           title="Show popover on load!"
           onRequestClose={() => setShowPopover(false)}
         >
