--- a/packages/design/src/Elevations.mdx
+++ b/packages/design/src/Elevations.mdx
@@ -4,7 +4,7 @@ menu: Design
 route: /elevation
 ---
 
-import { Banner } from "@/components/Banner";
+import { Banner } from "../components/Banner";
 
 # Elevation
 
