fix: cleaned up css

--- a/packages/components/src/Popover/Popover.mdx
+++ b/packages/components/src/Popover/Popover.mdx
@@ -57,6 +57,7 @@ import { Popover } from "@jobber/components/Popover";
           title="Show popover on load!"
           onRequestClose={() => setShowPopover(false)}
         >
+          <Content>Some amazing content</Content>
           <Content>
             <Button
               label="Disappear forever"
@@ -152,6 +153,7 @@ You have 5 preferredPlacement options you can use
           title="Show popover on load!"
           onRequestClose={() => setShowPopover(false)}
         >
+          <Content>Some amazing content</Content>
           <Content>
             <Button
               label="Disappear forever"
