update doc name and color values

--- a/packages/design/src/Borders.mdx
+++ b/packages/design/src/Borders.mdx
@@ -1,5 +1,5 @@
 ---
-name: Dividing Content
+name: Borders
 menu: Design
 route: /borders
 ---
@@ -47,11 +47,11 @@ closing of already-divided sections, such as a
 
 ### Border Colors
 
-Borders should use `var(--color-grey--lighter)` for most use cases.
+Borders should use `--color-border)` for most use cases.
 [`List` sections](https://atlantis.getjobber.com/components/list#sectioned-list-items),
 [`Table` headers](https://atlantis.getjobber.com/components/table) and other
 scenarios where other bordered content is being further subsectioned should use
-`var(--color-blue)`.
+`--color-border--section)`.
 
 For accessibility reasons, ensure that color usage is not the only way to
 [convey meaning](https://webaim.org/articles/contrast/#sc141) in an interface.
