--- a/packages/components/src/Popover/Popover.mdx
+++ b/packages/components/src/Popover/Popover.mdx
@@ -6,7 +6,6 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
-import { ComponentStatus } from "@jobber/docx";
 import { Content } from "../Content";
 import { Heading } from "../Heading";
 import { Button } from "../Button";
@@ -16,9 +15,9 @@ import { Popover } from ".";
 
 # Popover
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
-
-Write a description about what Popover component is trying to achieve.
+A Popover displays floating informative and actionable content positioned in
+relation to a target. The Popover can contain content, media, or other
+components.
 
 ```ts
 import { Popover } from "@jobber/components/Popover";
@@ -43,63 +42,74 @@ import { Popover } from "@jobber/components/Popover";
           preferredPlacement="right"
           onRequestClose={() => setShowPopover(false)}
         >
-          <Content>Here is your first popover</Content>
+          <Content>Here is your first Popover</Content>
         </Popover>
       </>
     );
   }}
 </Playground>
 
-<!--
-  It is not necessary to include Design & Usage Guidlelines. Use this section
-  to answer common questions and considerations about component usage.
--->
-
-## Design & Usage Guidelines
-
-When contributing to, or consuming the Popover component, consider the
-following:
-
-### Usage
-
-The popover component displays floating informative and actionable content in
-relation to a target. The popover can contain content, media, or other
-components.
-
-Some scenarios for popover include the following:
-
-- Show available related actions
-- First time experience
-- To call out product features or changes
-
-There are also some outstanding questions:
-
-- Can our current tooltips can be a real tooltip?
-
-### Content
-
-- Popover text content should not exceed 3 lines and can consist of an optional
-  "dismiss" CTA
-
-### Reference Docs
-
-- Documentation on the popper plugin that was used to build the popover
-  component https://popper.js.org/react-popper/v2/
-
 ## Props
 
 <Props of={Popover} />
 
-<!--
-  It is not necessary to provide an example of each prop. Use usage examples to
-  highlight key features of a component or particular considerations.
+## Usage Guidelines
 
-  See `Button.mdx` for a good example of this.
--->
+Some scenarios for Popover include the following:
+
+### Functional
+
+Reveal a list of available actions to the user. For example, if the user clicks
+on an element and there are four potential actions they might take, Popover is a
+great way to present those actions.
+
+### Informational
+
+Introducing the user to a new experience, whether their first time using a
+product or to introduce a new or updated functionality in an existing
+experience, Popover can be an excellent choice to highlight a specific piece of
+the experience.
+
+If there is an "acknowledgement" CTA for the user to confirm that they
+understand the change, use a `learning`
+[Button](https://atlantis.getjobber.com/components/button).
+
+### Related Components
+
+To add a hint about a UI element's function in a permanent fashion (ie revealing
+a Button's label on hover), use
+[Tooltip](https://atlantis.getjobber.com/components/tooltip).
+
+To add an inline informational element that the user can dismiss, consider if
+[Banner](https://atlantis.getjobber.com/components/banner) is the right fit for
+your use case.
+
+## Content Guidelines
+
+- Popover text content should not exceed three lines, and should be concise and
+  clear
+- In "informational" usage, Popper may have a CTA that allows the user to
+  "acknowledge" and dismiss the Popover; this does not replace the need for the
+  dismiss button
+
+## Accessibility
+
+Popover has a role of `dialog` as it is an element that the user will be "in
+dialogue" with, whether selecting an action, confirming acknowledgement, or
+dismissing the Popover.
+
+Depending on your use case, you may need to add focus management to your usage
+of Popover; for example, if selecting a Button opens a Popover, you will want to
+then set focus to the Popover, and if the user dismisses the Popover, return
+focus to the button that opened the Popover.
+
+If your element is effectively acting as an inline DOM element that the user
+would otherwise encounter when traversing the page, this focus management may
+not be necessary.
 
 ## preferredPlacement options
 
-You have 5 preferredPlacement options you can use
+You have 5 `preferredPlacement` options you can use:
 
 - `right`
 - `top`
@@ -172,3 +182,10 @@ You have 5 preferredPlacement options you can use
     );
   }}
 </Playground>
+
+## Notes
+
+- There is no built-in focus management in Popover, as the specific
+  implementation should drive those considerations
+- Popover uses a plugin called [Popper](https://popper.js.org/react-popper/v2/)
+  to power its' positioning
